<resources>
    <string name="app_name">DomoticaApp</string>

    <string name="menu_item_lista_comodos">Listar cômodos</string>
    <string name="menu_item_adicionar">Adicionar</string>
    <string name="menu_item_conectar">Conectar</string>
    <string name="titulo_dispositivos_pareados">Dispositivos pareados</string>
    <string name="titulo_outros_dispositivos">Outros dispositivos</string>
    <string name="botao_escanear">Escanear</string>
    <string name="titulo_escaneando">Escaneando...</string>
    <string name="titulo_selecionado">Selecionando dispositivo</string>
    <string name="titulo_nao_encontrado">Dispositivo não encontrado</string>


    <string name="txt_temperatura">00,00</string>
    <string name="txt_titulo_amarelo">Amarelo</string>
    <string name="txt_titulo_verde">Verde</string>
    <string name="txt_titulo_vermelho">Vermelho</string>
    <string name="txt_titulo_temperatura">Temperatura</string>
    <string name="txt_on">On</string>
    <string name="txt_off">Off</string>

</resources>

