<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.NavigationView
        android:id="@+id/nvv_principal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_menu"
        app:menu="@menu/menu_opcoes">

    </android.support.design.widget.NavigationView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:alpha="1.35"
            android:id="@+id/tb_navigation"
            android:elevation="10dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
            android:text="@string/txt_titulo_vermelho"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_vermelho"
            android:layout_alignBaseline="@+id/tb_vermelho"
            android:layout_alignBottom="@+id/tb_vermelho"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/gdl_h_50"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/gdl_v_50"
            android:layout_marginEnd="8dp" />

        <ToggleButton
            android:layout_height="62dp"
            android:id="@+id/tb_verde"
            android:layout_below="@+id/tb_amarelo"
            android:layout_alignStart="@+id/tb_amarelo"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_verde"
            app:layout_constraintBottom_toTopOf="@+id/gdl_h_75"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/gdl_v_50"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/lamp_off_icon2"
            android:checked="false"
            android:textOff="@string/txt_off"
            android:textOn="@string/txt_on"
            android:layout_width="40dp" />

        <ToggleButton

            android:layout_height="62dp"
            android:id="@+id/tb_amarelo"
            android:layout_alignStart="@+id/tb_vermelho"
            app:layout_constraintRight_toLeftOf="@+id/gdl_v_50"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_amarelo"
            android:background="@drawable/lamp_off_icon2"
            android:textOff="@string/txt_off"
            android:textOn="@string/txt_on"
            android:layout_width="40dp" />

        <TextView
            android:text="@string/txt_titulo_amarelo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_amarelo"
            android:layout_alignBaseline="@+id/tb_amarelo"
            android:layout_alignBottom="@+id/tb_amarelo"
            android:layout_alignStart="@+id/txt_vermelho"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/gdl_v_50"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/gdl_h_75"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/txt_titulo_verde"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_verde"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/gdl_v_50"
            app:layout_constraintTop_toTopOf="@+id/gdl_h_50"
            android:layout_marginTop="8dp" />

        <ToggleButton
            android:layout_height="62dp"
            android:id="@+id/tb_vermelho"
            android:layout_above="@+id/tb_amarelo"
            android:layout_toEndOf="@+id/txt_vermelho"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/gdl_v_50"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/gdl_h_75"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_vermelho"
            android:background="@drawable/lamp_off_icon2"
            android:textOff="@string/txt_off"
            android:textOn="@string/txt_on"
            android:layout_width="40dp" />

        <ImageView
            android:layout_width="335dp"
            android:layout_height="219dp"
            app:srcCompat="@drawable/sala"
            android:id="@+id/imageView2"
            android:layout_above="@+id/txt_vermelho"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/gdl_h_50"
            android:layout_marginBottom="8dp" />

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gdl_h_50"
                android:orientation="horizontal"
                tools:layout_editor_absoluteY="256dp"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gdl_h_75"
                android:orientation="horizontal"
                tools:layout_editor_absoluteY="383dp"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintGuide_percent="0.75" />

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gdl_v_50"
                android:orientation="vertical"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="192dp"
                app:layout_constraintGuide_percent="0.5"/>

            <TextView
                android:text="@string/txt_temperatura"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:id="@+id/txt_temperatura"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_titulo_temperatura"
                app:layout_constraintLeft_toLeftOf="@+id/gdl_v_50"
                android:layout_marginStart="16dp" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/temperatura_icon"
                android:id="@+id/imageView3"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/txt_temperatura"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_titulo_temperatura" />

            <TextView
                android:text="@string/txt_titulo_temperatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_titulo_temperatura"
                android:textSize="20sp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@+id/gdl_h_75"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/gdl_v_50"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" />
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
